--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,16 +7,15 @@ on:
 
 permissions:
   contents: read
-  id-token: write
   pages: write
-  actions: write
+  id-token: write
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Use Node.js
@@ -31,17 +30,16 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload artifact for deployment
+      - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./dist
 
   deploy:
-    needs: build-deploy
+    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
 
     steps:
       - name: Deploy to GitHub Pages
